Save/Update files [ci skip]

--- a/source/localisation/eldorado_l_english.yml
+++ b/source/localisation/eldorado_l_english.yml
@@ -88,7 +88,7 @@
  seven_cities_events.4.a:0 "欲しいものがあれば言え、何でもくれてやる！"
  seven_cities_events.4.b:0 "探検を続け、皇帝の都については忘れる。"
  seven_cities_events.5.t:0 "シエラ・デ・ラ・プラタ"
- seven_cities_events.5.d:0 "白の王が、銀の山々が睥睨するこの地域一帯を支配していることにより、乗組員は船の難破よりかろうじて救助された。$PROVINCENAME$で難破している間に、我々は原住民と友好的な関係を築き、多くの貴金属が眠る偉大な山々について聞いた。そこは、本土から遠く離れ、到着するのに数週間とはいわないものの、多くの日数がかかるのだそうだ。彼らが持ってきた金属は、この伝説に真実の一粒を与え、それだけでなく、彼らはシエラ・デ・ラ・プラタ－銀の山々の探索に参加することを申し出ている。"
+ seven_cities_events.5.d:0 "白の王が、銀の山々が睥睨するこの地域一帯を支配していることにより、乗組員は船の難破よりかろうじて救助された。$PROVINCENAME$で難破している間に、我々は原住民と友好的な関係を築き、多くの貴金属が眠る偉大な山々について聞いた。そこは、本土から遠く離れ、到着するのに数週間とはいわないものの、多くの日数がかかるのだそうだ。彼らが持ってきた金属は、この伝説に真実の一粒を与え、それだけでなく、彼らはシエラ・デ・ラ・プラタ（銀の山々）の探索に参加することを申し出ている。"
  seven_cities_events.5.a:0 "彼らを連れて、銀を見つけよう！"
  seven_cities_events.5.b:0 "そこに真実の一粒はない！"
  seven_cities_events.6.t:0 "ノルムベガ"
@@ -168,7 +168,7 @@
  seven_cities_events.213.d:0 "我々はついにシエラ・デ・ラ・プラタの伝説が真実であると発見した…だがそれは銀の山でも七つの黄金郷の一つでもなかった！シエラ・デ・ラ・プラタは$PROVINCENAME$で見つかったが、その銀は我々が毎月それなりの額を得られる程度のものだった。"
  seven_cities_events.213.a:0 "よし！"
  seven_cities_events.214.t:0 "シエラ・デ・ラ・プラタ－銀の山"
- seven_cities_events.214.d:0 "銀で満たされた偉大な山の下に、白い王は存在した。シエラ・デ・ラ・プラタ－銀の山々は、$PROVINCENAME$で伝説から実際の都市へと成長し、我々はそれを発見した最初の文明人であった！喜べ、我々は莫大な富と非常に騙されやすい人々の場所を見つけたことで、我々が欲するもの、いや、我々が必要なものを得るのに何の問題もないであろう！"
+ seven_cities_events.214.d:0 "銀で満たされた偉大な山の下に、白い王は存在した。シエラ・デ・ラ・プラタ（銀の山々）は、$PROVINCENAME$で伝説から実際の都市へと成長し、我々はそれを発見した最初の文明人であった！喜べ、我々は莫大な富と非常に騙されやすい人々の場所を見つけたことで、我々が欲するもの、いや、我々が必要なものを得るのに何の問題もないであろう！"
  seven_cities_events.214.a:0 "素晴らしい！"
  seven_cities_events.215.t:0 "痕跡すらないノルムベガ"
  seven_cities_events.215.d:0 "ノルムベガの街は、それを発見したと主張したフランスの探検家によって作られたでっち上げだったに違いない。唯一の幅40リーグ全体の川には島がなく、さらに先に街がある兆候はない。我々はヴァイキングの定住地と同じくらい馬鹿げたものを信じるのに十分に愚かであり、発見を試みた時間は無駄であった。"
@@ -222,7 +222,7 @@
  sce_search_norumbega:0 "ノルムベガの探索"
  desc_sce_search_norumbega:0 "このコンキスタドールは北アメリカにある豊かなヴァイキング植民地、ノルムベガを探しています。"
  sce_search_quivira:0 "キビラ"
- desc_sce_search_quivira:0 "黄金の杯が木々にぶら下がっている土地－これがコンキスタドールが探している場所だ。"
+ desc_sce_search_quivira:0 "黄金の杯が木々にぶら下がっている土地、これがコンキスタドールが探している場所だ。"
  sce_norumbega_abandoned:1 "ノルムベガ"
  desc_sce_norumbega_abandoned:1 "ノルムベガの古代都市が発見された！豊富な貴金属は、開かれた通りの継ぎ目に置かれている。"
  sce_search_saguenay:0 "サグネ王国の探索"
@@ -427,7 +427,7 @@
  maya_religion_events.3.t:0 "人身御供"
  maya_religion_events.3.d:0 "奴隷や囚人たちがマヤの神々への一般的な生贄であるが、七面鳥、犬、リス、ウズラ、イグアナなどの動物でさえも、適切な供物であると考えられている。神は常により多くの血を渇望しており、我々の隣人たちは、孤児と私生児が他のどの生贄よりも早く神をなだめると主張している。"
  maya_religion_events.3.a:0 "動物を生贄にしてみよう。"
- maya_religion_events.3.b:0 "子供を生贄に捧げる－彼らが孤児である限り。"
+ maya_religion_events.3.b:0 "子供を生贄に捧げる、彼らが孤児である限り。"
  maya_religion_events.4.t:0 "創造と破壊の循環"
  maya_religion_events.4.d:0 "我々の物語や神話は、人が神に対する義務を怠った場合に起こる結果を思い出させる、創造と破壊の循環の繰り返しを伝えている。我々には、我々の存続を可能にする神々に対する責任がある。創造と混沌の神々と他の勢力は、世界の破壊をもたらすかもしれない、それぞれの52年間を戦う。神に対する義務を無視すれば、すべての地上の生き物の運命を決める戦いは、我々の望む結果では終わらないかもしれない。"
  maya_religion_events.4.a:0 "…そして我々は人々を恐怖で覆うことしかできない…"
@@ -688,7 +688,7 @@
  custom_idea_infantry_power:0 "熟練した軍曹"
  custom_idea_infantry_power_desc:0 "軍曹は軍隊の真の指揮官である。－戦士たちが農民の間で争いを起こすのを防ぐために、士官たちがそこにいる。"
  custom_idea_cavalry_power:0 "優れた馬の繁殖"
- custom_idea_cavalry_power_desc:0 "どの騎手も、馬の質は騎馬の質と同じくらい重要であると言う。－多くの場合にはなおさら。"
+ custom_idea_cavalry_power_desc:0 "どの騎手も、馬の質は騎馬の質と同じくらい重要であると言う。多くの場合にはなおさら。"
  custom_idea_artillery_power:0 "高品質の弾薬"
  custom_idea_artillery_power_desc:0 "弾薬が良ければ良いほど、マスケット銃と大砲の力は向上する。"
  custom_idea_infantry_cost:0 "大量徴兵"
@@ -1064,9 +1064,9 @@
  TREASURE_FLEET_TOOLTIP:0 "$COUNTRY$からの次の財宝艦隊は、§Y$DATE$§!に到着する予定です。§Y$NUM$§!の価値がある金銀をもたらすと推定されます。"
  TREASURE_FLEET_TOOLTIP_CANT_REACH:0 "我々の交易中心地である$OURNODE|Y$は彼らの交易中心地である$THEIRNODE|Y$の下流にはないため、$COUNTRY$は財宝艦隊を送ることはできません。"
  TREASURE_FLEET_TOOLTIP_CANT_REACH_DELAYED:0 "§R彼らは代わりに黄金を収入とするでしょう。§!\n\n我々が交易中心地を彼らの下流のノードに移した場合、我々は財宝艦隊を受け取るでしょう。"
- CANNOT_SACRIFICE_NO_ADULT:0 "§R－成人の君主と後継者のみ、生贄に捧げることができます。§!"
- CANNOT_SACRIFICE_NO_HEIR:0 "§R－彼らには生贄に捧げる後継者がいません！§!"
- CANNOT_SACRIFICE_UNTIL:0 "§R－最近、統治者あるいは後継者を生贄に捧げたので、我々は§Y$DATE$§!まで別の者を生贄に捧げることはできません。§!"
+ CANNOT_SACRIFICE_NO_ADULT:0 "§R- 成人の君主と後継者のみ、生贄に捧げることができます。§!"
+ CANNOT_SACRIFICE_NO_HEIR:0 "§R- 彼らには生贄に捧げる後継者がいません！§!"
+ CANNOT_SACRIFICE_UNTIL:0 "§R- 最近、統治者あるいは後継者を生贄に捧げたため、我々は§Y$DATE$§!まで別の者を生贄に捧げることができません。§!"
  SACRIFICE_RULER_DESC:0 "§Y$COUNTRY$§!の§Y$TITLE$$RULER$§!を神への生贄に捧げることで、我々の破滅を§G$AMT$§!低下させ、全従属国との関係を§R-100§!減少させ、独立欲求を§R$LD_INC$%§!増加させるでしょう。"
  SACRIFICE_HEIR_DESC:0 "§Y$COUNTRY$§!の後継者を神への生贄に捧げることで、我々の破滅を§G$AMT$§!低下させ、我々の従属国との関係を§R-75§!減少させ、独立欲求を§R$LD_INC$%§!増加させるでしょう。"
  maya_nation_title:0 "マヤパン同盟を再結成"
