--- a/source/localisation/hints_l_english.yml
+++ b/source/localisation/hints_l_english.yml
@@ -52,7 +52,7 @@
  HINT_DIPLOMAT_TITLE:0 "外交官"
  HINT_DIPLOMAT_TEXT:0 "外交官は、他国に外交提案を送るため外交行動を行うのに使用されます。彼らは提案を届けた後は、あなたが新たな外交提案を与えることができるよう、帰国する必要があります。"
  HINT_MOREDIPLOMAT_TITLE:0 "外交官の獲得"
- HINT_MOREDIPLOMAT_TEXT:1 "より多くの外交官は、外交や貴族のアイデアグループを選択することで獲得できます。教皇の支配者であることや王国級の政府ランクを持つことも、追加の外交官を得られます。"
+ HINT_MOREDIPLOMAT_TEXT:1 "より多くの外交官は、外交や貴族のアイデアグループを選択することで獲得できます。教皇の支配者であることや王国級の政府ランクを持つことでも、追加の外交官を得られます。"
  HINT_MISSIONARY_TITLE:0 "宣教師"
  HINT_MISSIONARY_TEXT:0 "宣教師は、州の宗教を改宗するために使われます。州で信仰されている宗教が国教と異なる場合は、州の改宗を行うため宣教師を派遣することができます。改宗が終了すると宣教師は元の場所に戻り、次の新たな命令に備えます。"
  HINT_MOREMISSIONARY_TITLE:0 "宣教師の獲得"
@@ -154,9 +154,9 @@
  HINT_TERRAINCOGNITA_TITLE:0 "未知領域"
  HINT_TERRAINCOGNITA_TEXT:1 "未知領域は、まだ探索していない世界の一部です。あなたのユニットは探検家や征服者に率いられているか、あるいは土地があなたと戦争中の誰かによって所有されていない限り、そこにユニットを移動させることは不可能です。"
  HINT_TERRAINCOGNITA_ED_TEXT:0 "未知領域はあなたがまだ探求していない世界の一部です。探検家や征服者が率いるユニットにここで探検する任務を与えなければなりません。任務が実行されるまでここにユニットを移動させることは不可能です。"
- HINT_TERRAINCOGNITA_QFTNW_WARN:0 "§R－大洋を越えて探検するには$IDEANAME$のアイデアが必要です。§!"
- HINT_TERRAINCOGNITA_NEED_EXPLORER:0 "§R－あなたの艦隊は未知領域を明らかにするために探検家が率いなければなりません。§!"
- HINT_TERRAINCOGNITA_OUT_OF_RANGE:0 "§R－現在の植民範囲ではここを探索することが出来ません。§!"
+ HINT_TERRAINCOGNITA_QFTNW_WARN:0 "§R- 大洋を越えて探検するには$IDEANAME$のアイデアが必要です。§!"
+ HINT_TERRAINCOGNITA_NEED_EXPLORER:0 "§R- 艦隊が未知領域を明らかにするためには、探検家が率いなければなりません。§!"
+ HINT_TERRAINCOGNITA_OUT_OF_RANGE:0 "§R- 現在の植民範囲ではここを探索することができません。§!"
  HINT_TERRAINCOGNITA_EXPLORE_REGION:0 "右クリックして、§Y$REGION$§!の探検のためにあなたの艦隊を派遣します。"
  HINT_LOANS_TITLE:0 "借金"
  HINT_LOANS_TEXT:0 "経済的な危機の観点から国を救うために、あるいはより長期的な利益のある経済的投資をするために借金をすることができます。借金をすると即座にダカットが得られ、借金が返済されるまで毎月利息が支払われます。あなたの利益があなたの毎月の収入よりも高い場合、あなたの国は破産するでしょう。あなたは借金をすることを恐れるべきではありません。"
