--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -1149,9 +1149,9 @@
  thuan_thien_desc:0 "順天は、解放者黎利により振るわれた伝説の剣の名前だ。彼が剣を振るった際、剣は彼に千人力を与え、最終的に中国のくびきを振り払った。黎利は正当で賢明で有能という理想的な儒教指導者の完全な体現者である。黎利の後の皇帝全員が彼を基準に見られ、大抵が足りていないと見られた。皇帝は、儒教の理念を達成することを目指し、祖先の遺産に沿うために大きな成功を収めている。政府で儒教の理念を深く実現し、儒教の儀礼に正しく従うことによって、領土の調和を見ることにより、天命を完全に維持した。従って、正統性を完全に肯定するための支配に挑戦する立場にいるライバルの主張者はいない。"
  literary_reform:0 "文語の改良"
  literary_reform_desc:0 "何世紀にも渡り、古典中国語を用いて文書を書いてきた。しかし、我々の言語を書くのに使用された文字はチュノムで、チュノムは古典中国の文字であるチュハンを基に作られた自国文字である。チュノムは標準化されておらず、古典中国語に比べ頻繁に使用されていなかったため、統治目的用の文字を国家文字とする改革への動きがあった。"
- SAV_ideas:0 "サヴォイのアイデア"
- SAV_ideas_start:0 "サヴォイの伝統"
- SAV_ideas_bonus:0 "サヴォイの宿願"
+ SAV_ideas:0 "サヴォイアのアイデア"
+ SAV_ideas_start:0 "サヴォイアの伝統"
+ SAV_ideas_bonus:0 "サヴォイアの宿願"
  repel_the_french:0 "フランスを撃退"
  repel_the_french_desc:0 "この土地はウンベルト1世が1032年にその称号を手に入れて以来、サヴォイア家に属してきたが、フランスは長い間イタリアの覇権を夢見ており、彼らの野望への道はまっすぐ我々の土地を貫いている。彼らが再びやって来る時には、我々は準備ができていなければならない。"
  the_shroud_of_turin:0 "トリノの聖骸布"
@@ -1160,11 +1160,11 @@
  sav_mercenary_tradition_desc:0 "他のイタリア国家と同様、我々の小規模な所有地では多くの場合、補強として傭兵に頼るか、あるいは正規の部隊を置き換えることさえある。彼らは望ましくない特質であるが、長期的な関係は費用の面では良い効果をもたらしている。"
  crush_the_vaudois:0 "ワルドー派弾圧"
  crush_the_vaudois_desc:0 "宗教改革はキリスト教世界全体で荒れ狂っているかもしれないが、我々の土地では、地方でヴォードワとして知られているワルドー派の中世の異端であるかなり古い運動が我々を脅かしている。ヴォードワたちに身の程を思い知らせることで、我々の土地における宗教的緊張を緩和できるだろう。"
- savoyard_flexibility:0 "サヴォイ的柔軟性"
+ savoyard_flexibility:0 "サヴォイア的柔軟性"
  savoyard_flexibility_desc:0 "サヴォイア家は、11世紀以来、変化を無視してこの土地を支配してきたわけではなく、むしろ、恥知らずの日和見主義者としての名声を築き、我々の国家を進歩させるための新たな好機を見出すことを常に強く望んでいる。伝統主義者の目には不快に写るだろうが、日和見主義は良い面もある。"
  alpine_tolls:0 "アルプス通行税"
  alpine_tolls_desc:0 "我々の土地における利用可能な街道が少数であることで、我々は交易路に沿って国境を越えようとする商人に税を課すことが可能である。"
- savoyard_legitimacy:0 "サヴォイの正統性"
+ savoyard_legitimacy:0 "サヴォイアの正統性"
  savoyard_legitimacy_desc:0 "我々の創始者である、ウンベルト・ビアンカマーノは、オットー家が依然として帝国を支配していた際に支持した皇帝ヘンリ2世によってサヴォイ伯に列せられた。多くの他の王朝は途中で断絶したが、ウンベルトのサヴォイア家は続いている。"
  SAX_ideas:0 "ザクセンのアイデア"
  SAX_ideas_start:0 "ザクセンの伝統"
@@ -1360,7 +1360,7 @@
  beacon_of_learning:0 "学問の篝火"
  beacon_of_learning_desc:0 "アル・アンダルスは、かつてアフマド・イブン・ルシュド、アブー・アル・カースィム、ムハンマド・イブン・トゥファイルなどの優れた学者による学術の中心地であった。我々は祖先のこの精神を継承するべきだ。"
  strait_of_gibraltar:0 "ジブラルタル海峡"
- strait_of_gibraltar_desc:0 "ジブラルタル海峡－ムスリムの偉大な将軍ターリク・イブン・ズィヤードにちなんで名付けられた－は、大西洋と地中海を結びつけ、アフリカとヨーロッパを隔てている。我々がこの狭い海峡の支配を確保できれば、交易はより有益なものになるだろう。"
+ strait_of_gibraltar_desc:0 "ジブラルタル海峡（ムスリムの偉大な将軍ターリク・イブン・ズィヤードにちなんで名付けられた）は、大西洋と地中海を結びつけ、アフリカとヨーロッパを隔てている。我々がこの狭い海峡の支配を確保できれば、交易はより有益なものになるだろう。"
  alhambra:0 "アルハンブラ"
  alhambra_desc:0 "我々の詩人は、エメラルドの中に置かれた真珠のようだと、その建物の色とその周りの森を描写している。首都を見下ろす丘の上にあるアルハンブラは、建築、設計、工学におけるアンダルシアの非凡な才能の模範である。"
  moors:0 "ムーア人"
@@ -1409,7 +1409,7 @@
  bastion_of_orthodoxy:0 "正教の砦"
  bastion_of_orthodoxy_desc:0 "東の地平線に迫り来るオスマン帝国と、バリャクタルの前にバルカン半島の大部分が征服される中で、セルビアは、東方のキリスト教文明存続のため、正教会の最後のバルカンの砦の役割を果たすだろう。"
  home_of_hussars:0 "軽騎兵の故郷"
- home_of_hussars_desc:0 "概念としての軽騎兵は古代ローマのアイデアであったが、最初のバルカンの軽騎兵－あるいはグサール（コルセアや海賊）として知られていた彼らは、ビザンツ帝国の予備の部隊として登場し、10世紀と11世紀にセルビアを支配したビザンツによって主に募集された。ビザンツの勢力が衰えた後でさえも、この伝統は残り、次の世紀にはさらに改良された。"
+ home_of_hussars_desc:0 "概念としての軽騎兵は古代ローマのアイデアであったが、最初のバルカン軽騎兵あるいはグサール（海賊）として知られていた彼らは、ビザンツ帝国の予備の部隊として登場し、10世紀と11世紀にセルビアを支配したビザンツによって主に募集された。ビザンツの勢力が衰えた後でさえも、この伝統は残り、次の世紀にはさらに改良された。"
  alemannic_guard:0 "アレマン近衛兵"
  alemannic_guard_desc:0 "アレマン近衛兵の再建－常設軍の伝統は、主にドイツの貴族や騎士の、継承への望みがほとんどない第二または第三子によって構成され、それは人生の展望としての軍事的経歴に他ならなかった。"
  gold_mines:0 "金鉱"
@@ -1985,7 +1985,7 @@
  duchy_of_mercantilism:0 "重商主義の公国"
  duchy_of_mercantilism_desc:0 "我が国は小さいかもしれないが、断じて取るに足らないものではなく、クールラント公国はバルト海周辺で最も重要な交易国家の一つであった。我々はこれをさらに一歩進めるべきである。重商主義政策を推進することで、我々は国家を地域の真の力へと鍛え上げることができる！"
  booming_manufacture:0 "製造業の活況"
- booming_manufacture_desc:0 "繁栄する重商主義と成功した農業は、産業の発展に貢献している。我々は世界の工場ではないかもしれないが、我々の製品はヨーロッパ全土にある－我々は錨や大砲、準備されたレンガやタイル、ガラスや布、さらに多くを生産することができ、クルディーガ、リーバウ、ヴェンツピルスで造られた船はイングランドとフランスで売られている。このように繁栄している経済は、確かに我々にとって良いものとなるだろう…"
+ booming_manufacture_desc:0 "繁栄する重商主義と成功した農業は、産業の発展に貢献している。我々は世界の工場ではないかもしれないが、我々の製品はヨーロッパ全土にある。我々は錨や大砲、準備されたレンガやタイル、ガラスや布、さらに多くを生産することができ、クルディーガ、リーバウ、ヴェンツピルスで造られた船はイングランドとフランスで売られている。このように繁栄している経済は、確かに我々にとって良いものとなるだろ"
  couronian_colonization:0 "クールラントの植民地"
  couronian_colonization_desc:0 "新世界の発見は、我々の大陸において無視できない変化をもたらした。これは可能性の時代であり、我々は後退してはならない！我々の富により我々は探検と植民地化の鍵となるかなりの艦隊を支援し、海外での利益と国家全体の繁栄を保証することができる。"
  palaces_of_mitau:0 "ミタウの宮殿"
@@ -2770,7 +2770,7 @@
  latin_roots:0 "ラテンの起源"
  latin_roots_desc:0 "古くからの祖国であるイタリアがルネサンスを通じて、かつてないほどの技術の進歩を遂げたことで、これらの新しい、時には危険な、時には素晴らしいアイデアの多くが我々の元へと届いている。結局、遠くのいとこが報われる。結局、遠くの親戚たちは成功したのだ。"
  naxian_ambitions:0 "ナクソスの野望"
- naxian_ambitions_desc:0 "ラテン帝国－我々の古い封建君主の中心－がなくなっても、十字軍のラテン系の遺産は、まだ我々の中で生きている。西洋の文化や宗教の砦は小さくても強固である。我々ちは小さな国家であるが、長い間の帝国を復元しようという我々の野望は偉大なものだ。"
+ naxian_ambitions_desc:0 "ラテン帝国（我々の古い封建君主の中心）がなくなっても、十字軍のラテン系の遺産は、まだ我々の中で生きている。西洋の文化や宗教の砦は小さくても強固である。我々ちは小さな国家であるが、長い間の帝国を復元しようという我々の野望は偉大なものだ。"
  TUA_ideas:0 "タプイアのアイデア"
  TUA_ideas_start:0 "タプイアの伝統"
  TUA_ideas_bonus:0 "タプイアの宿願"
@@ -2794,7 +2794,7 @@
  pom_idea_1:0 "海賊の遺産"
  pom_idea_1_desc:0 "富の行き交うバルト海に面したドイツ北岸は、海賊行為に適した土地であり続けてきた。故に小国の主でさえ、多かれ少なかれ、公然とそれに加わってきた。ライバルから大金をかすめ取るのは最上の選択肢なのだ。"
  pom_idea_2:0 "ポメラニアの商人"
- pom_idea_2_desc:0 "ポメラニアには船や商品のために、安全な土地を求めてバルト海を航海する伝統が長く存在する。多くの外国人は、確かに我らのことを耳にしている－ノヴゴロドからコンスタンティノープルまで"
+ pom_idea_2_desc:0 "ポメラニアには船や商品のために、安全な土地を求めてバルト海を航海する伝統が長く存在する。多くの外国人は、確かに我らのことを耳にしている。ノヴゴロドからコンスタンティノープルまで"
  pom_idea_3:0 "北方の港"
  pom_idea_3_desc:0 "ポメラニアの港は戦略的に優れた位置にあり、バルト海交易へ影響力を拡大する時に天然の利があるのだ。"
  pom_idea_4:0 "信教の自由"
@@ -3554,7 +3554,7 @@
  pgr_istano_basa:0 "イスタノ・バサ"
  pgr_istano_basa_desc:0 "我々の王宮であるイスタノ・バサ・パガルユンは、伝統的なミナンカバウのルマ・ガダンの建築様式で建てられている。我らの国家の中心であり、文化全体であり、その土地がパガルユン王朝のものである永遠の権利の証拠である－何世紀にも渡り、我々の心となるであろう。"
  pgr_rajo_tigo_selo:0 "ラジョ・ティゴ・セロ"
- pgr_rajo_tigo_selo_desc:0 "イスタノ・バサ・パガルユンの王権は、3人の王により統治されている。世界の王であるラジャ・アラーム、アダットの王であるラジャ・アダット、宗教の王であるラジャ・イバダットである。まとめて、彼らは三座の王（ラジョ・ティゴ・セロ）と呼ばれた。彼らの連携は文明社会の中で強力な外交的立場を保証する－たった一人の暴君によって支配された他の野蛮な連中と違って！"
+ pgr_rajo_tigo_selo_desc:0 "イスタノ・バサ・パガルユンの王権は、3人の王により統治されている。世界の王であるラジャ・アラーム、アダットの王であるラジャ・アダット、宗教の王であるラジャ・イバダットである。まとめて、彼らは三座の王（ラジョ・ティゴ・セロ）と呼ばれた。彼らの連携は文明社会の中で強力な外交的立場を保証する。たった一人の暴君によって支配された他の野蛮な連中と違って！"
  pgr_high_education:0 "高等教育"
  pgr_high_education_desc:0 "我々は、ジャワ人ほど多くはないが、我々の文化の中で教育より重要なものはないので、我々は非常に影響力をもつ。ミナン人は商人として有名であることに加え、インドネシアで最も影響力のある詩人、政治家、学者を何人も輩出している。新しい技術の適応は、パラユングの偉大さの鍵だ。"
  pgr_rumah_gadang:0 "ルマ・ガダン"
@@ -6083,7 +6083,7 @@
  gel_rivers:0 "河川の支配"
  gel_rivers_desc:0 "低地地方内の他国が海の浸食と戦っている一方で、ヘルレはそれの川と戦っている。津波による頻繁に発生するリスクにより、我々は自身の土地内の水の流れを制御する河川工学の伝統を発展させることを強いられた。"
  gel_gelderland_wars:0 "ヘルダーラント戦争"
- gel_gelderland_wars_desc:0 "ヘルレは軍事紛争を全く知らない訳ではなく、その軍は再度軍事力で国境を拡大するための準備がいつでもできている。もちろん、我々の動機は単に拡張主義的ではない－我々はまた外国の王の侵略から低地地方を守ろうとしている。"
+ gel_gelderland_wars_desc:0 "ヘルレは軍事紛争を全く知らない訳ではなく、その軍は再度軍事力で国境を拡大するための準備がいつでもできている。もちろん、我々の動機は単に拡張主義的ではない。我々はまた外国の王の侵略から低地地方を守ろうとしている。"
  gel_looting:0 "支払いとしての略奪"
  gel_looting_desc:0 "兵士へ支払う為の硬貨をかき集めることは常に難しいことだ。国家による支払いに代わる方法として、多くの兵士や傭兵は彼らが従軍上で出くわしたどのような貴重品でもその土地から略奪する権利について喜んで受諾するだろう。"
  gel_diplomatic_expansion:0 "土地の交渉"
