--- a/source/localisation/prov_names_l_english.yml
+++ b/source/localisation/prov_names_l_english.yml
@@ -1082,9 +1082,9 @@
  PROV1103:0 "イル・ブルボン"
  PROV1104:0 "エイリークスフィヨルド"
  PROV1105:0 "ヴェストリビュッグズ"
- PROV1106:1 "Te Tai Tokerau"
+ PROV1106:1 "テ・タイ・トケラウ"
  PROV1107:0 "タラナキ"
- PROV1108:1 "Te Moana a Toi"
+ PROV1108:1 "テ・モアナ・ア・トイ"
  PROV1109:0 "ティマル"
  PROV1110:0 "アガディール"
  PROV1111:0 "アルギン"
@@ -1222,7 +1222,7 @@
  PROV1243:0 "サモア"
  PROV1244:0 "トゥアモトゥ諸島"
  PROV1245:0 "マノクワリ"
- PROV1246:1 "Ata Whenua"
+ PROV1246:1 "アタ・フェヌア"
  PROV1247:0 "コルシカ"
  PROV1248:0 "モルディブ"
  PROV1249:0 "ヨラ"
@@ -2698,9 +2698,9 @@
  PROV2734:0 "ユイン"
  PROV2735:0 "ガンジーママラ"
  PROV2736:0 "ヌクヌ"
- PROV2737:1 "Wairarapa"
- PROV2738:1 "Te Tau Ihu"
- PROV2739:1 "Waikato"
+ PROV2737:1 "ワイララパ"
+ PROV2738:1 "テ・タウ・イフ"
+ PROV2739:1 "ワイカト"
  PROV2740:0 "ボルネオ"
  PROV2741:0 "済州"
  PROV2742:0 "六鎮"
