--- a/source/localisation/random_new_world_l_english.yml
+++ b/source/localisation/random_new_world_l_english.yml
@@ -716,8 +716,8 @@
  p_aptakisic_adj:0 "アプタキジック"
  p_concepcion:0 "コンセプション"
  p_concepcion_adj:0 "コンセプション"
- p_connoquenessing:0 "コノ－ケネッシング"
- p_connoquenessing_adj:0 "コノ－ケネッシング"
+ p_connoquenessing:0 "コノーケネッシング"
+ p_connoquenessing_adj:0 "コノーケネッシング"
  p_winnipesaukee:0 "ウィニペソーキー"
  p_winnipesaukee_adj:0 "ウィニペソーキー"
  p_coudersport:0 "クーダーズポート"
