--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -108,8 +108,8 @@
  TECH_INVEST:0 "$TECH$への投資$VALUE$を$DIRECTION$。\n"
  GROUP_CHANGE:0 "技術グループが§Y$GROUP$§Wへと変更されます。\n"
  CHANGE_TAG:0 "§Y$NEW$§Wになります。\n"
- SET_GOVERNMENT_RANK:0 "$WHO$の政府ランクを$RANK$に変更します。"
- SET_GOVERNMENT_AND_RANK:0 "$WHO|Y$の政体を$GOV|Y$に変更します。政府ランクは$RANK|Y$です。\n"
+ SET_GOVERNMENT_RANK:0 "$WHO$の政府ランクが$RANK$に変わります。"
+ SET_GOVERNMENT_AND_RANK:0 "$WHO|Y$の政体が$GOV|Y$に変わります。政府ランクは$RANK|Y$です。\n"
  CREATE_REVOLT:0 "§R$SIZE$§W個連隊規模の反乱が§Y$WHERE$§Wで発生します。\n"
  CREATE_PIRATE:0 "§R$SIZE$§W隻の海賊が§Y$WHERE$§Wに姿を現しました。\n"
  NATIVE_FEROCITY:0 "$WHERE$の原住民が獰猛さ$VALUE$を$DIRECTION$。"
@@ -2259,20 +2259,20 @@
  REVOKECONDOTTIERI_REQDES:0 "$COUNTRY|Y$への$ARMY|Y$の貸し出しを中止しますか？"
  CANCELCONDOTTIERI_REQDES:0 "$COUNTRY|Y$から$ARMY|Y$の借り受けを中止しますか？"
  CONDOTTIERI:0 "コンドッティエーリ"
- CONDOTTIERI_US_AT_WAR:0 "§R－我々が戦争を行っている間は、この取り決めが発効してから$MONTHS$ヶ月が経過する$DATE|Y$まで中止することはできません。§!"
- CONDOTTIERI_THEM_AT_WAR:0 "§R－借り受け先が戦争を行っている間は、この取り決めが発効してから$MONTHS$ヶ月が経過する$DATE|Y$まで中止することはできません。§!"
- CONDOTTIERI_MIN_DURATION:0 "§R－この取り決めが発効してから$MONTHS$ヶ月が経過する$DATE|Y$まで中止することはできません。§!"
- CONDOTTIERI_AT_WAR:0 "§R－我々の戦争中にユニットを貸し出す提案をすることはできません。§!"
- CONDOTTIERI_WAR:0 "§R－我々と戦争中の国にユニットを貸し出す提案をすることはできません。§!"
+ CONDOTTIERI_US_AT_WAR:0 "§R- 戦争中は、この取り決めが発効してから$MONTHS$ヶ月が経過する$DATE|Y$まで中止することができません。§!"
+ CONDOTTIERI_THEM_AT_WAR:0 "§R- 借り受け先が戦争を行っている間は、この取り決めが発効してから$MONTHS$ヶ月が経過する$DATE|Y$まで中止することができません。§!"
+ CONDOTTIERI_MIN_DURATION:0 "§R- この取り決めが発効してから$MONTHS$ヶ月が経過する$DATE|Y$まで中止することはできません。§!"
+ CONDOTTIERI_AT_WAR:0 "§R- 戦争中にユニットを貸し出す提案をすることはできません。§!"
+ CONDOTTIERI_WAR:0 "§R- 我々と戦争中の国にユニットを貸し出す提案をすることはできません。§!"
  CONDOTTIERI_UNIT:0 "$UNIT$は現在、$COUNTRY|Y$によって雇用されています。"
  CANT_SPLIT_CONDOTTIERI:0 "コンドッティエーリのユニットを分割することはできません。"
  CANT_MERGE_CONDOTTIERI:0 "コンドッティエーリのユニットを統合することはできません。"
  CONDOTTIERI_IN_USE:0 "このユニットはすでに貸し出されています。"
  MAX_CONDOTTIERI_EXCEEDED:0 "貸し出すことができるのは最大で$VALUE$ユニットです。"
  CONDOTTIERI_TOO_EXPENSIVE:0 "$RECIPIENT|Y$は毎月$COST|Y$¤を支払う余裕がありません。"
- CONDOTTIERI_SUBJECT:0 "§R－あなたが従属国である間はコンドッティエーリを貸し出すことはできません。§!"
- CONDOTTIERI_OFFER_SUBJECT:0 "§R－従属国にコンドッティエーリを貸し出すことはできません。§!"
- CONDOTTIERI_OFFER_TRUCE:0 "§R－あなたが停戦協定を結んでいる国と戦争中の国へコンドッティエーリを貸し出すことはできません。§!"
+ CONDOTTIERI_SUBJECT:0 "§R- あなたが従属国である間はコンドッティエーリを貸し出すことはできません。§!"
+ CONDOTTIERI_OFFER_SUBJECT:0 "§R- 従属国にコンドッティエーリを貸し出すことはできません。§!"
+ CONDOTTIERI_OFFER_TRUCE:0 "§R- あなたが停戦協定を結んでいる国と戦争中の国へコンドッティエーリを貸し出すことはできません。§!"
  CONDOTTIERI_HIRED_BY:0 "雇用先"
  SELECT_LEADER_CONDOTTIERI:0 "§Rこの指揮官はコンドッティエーリを率いているため転任できません。§!"
  NO_CONDOTTIERI:0 "誰も我々のコンドッティエーリのために支払いを行っていません。"
@@ -2284,7 +2284,7 @@
  ICON_MARCH:0 "§Y辺境伯§!になることの提案"
  CLICK_TO_SELECT_CONDOTTIERI:0 "$UNIT|Y$をコンドッティエーリとして貸し出す提案をします。"
  CLICK_TO_DESELECT_CONDOTTIERI:0 "$UNIT|Y$の選択を解除"
- CONDOTTIERI_BOTH_SIDES_OF_WAR:0 "§R－我々は彼らの敵である$ENEMY$に軍隊を貸し出しているため、$RECIPIENT$にコンドッティエーリを貸し出すことはできません。§!"
+ CONDOTTIERI_BOTH_SIDES_OF_WAR:0 "§R- 我々は彼らの敵である$ENEMY$に軍隊を貸し出しているため、$RECIPIENT$にコンドッティエーリを貸し出すことはできません。§!"
  MAX_CONDOTTIERI_DESC:0 "最大で$VALUE|Y$ユニットを貸し出すことができます。"
  MAX_CONDOTTIERI_BASE:0 "基本：§Y$BASE$§!\n"
  MAX_CONDOTTIERI_MOD:0 "補正により：$SUM$\n"
@@ -4540,8 +4540,8 @@
  desc_chinese_bureaucracy:0 "中国は、広大で豊かで自給自足している。広がっている新儒教の官僚主義は厳密に内向きとなっており、世界の残りの部分は外国人を嫌う目で見られている。我々が資源を有効に活用して拡大したいのであれば、我々は改革と西洋化を行う必要がある。"
  TECHNOLOGY:0 "技術"
  RESEARCH_EFF:0 "研究効率"
- UNIT_TECH_DRO:0 "－ユニットタイプ§Y$TYPE$§Wが使用可能になります"
- MAX_CAV_TO_INF:0 "－部隊内の騎兵の数が次の値より多い場合、不十分な支援のペナルティを受けます"
+ UNIT_TECH_DRO:0 "- ユニットタイプ§Y$TYPE$§Wが使用可能になります"
+ MAX_CAV_TO_INF:0 "- 部隊内の騎兵の数が次の値より多い場合、不十分な支援のペナルティを受けます"
  UNIT_TECH:0 "ユニット技術"
  cb_tribal_feud:0 "部族の確執"
  cb_tribal_feud_desc:0 "我が部族は奴らより強し！"
@@ -6170,7 +6170,7 @@
  move_the_court_to_versailles_title:0 "ヴェルサイユに宮廷を移転"
  move_the_court_to_versailles_desc:0 "ヴェルサイユの小さな村の周りの土地は長い間優れた狩猟の地であり、小さな狩猟用のロッジは着実に壮大な眺めの宮殿となっています。これを今、フランス政治の中心地とするのは適切だろうか？"
  enact_edict_de_nantes_title:0 "ナントの勅令を制定"
- enact_edict_de_nantes_desc:0 "王国は、無数の派閥や宗派によって大きく引き裂かれ、すべての団体のうち最も正統なものは最も少数であった。神は我々にこの嵐に対抗する力を与え、我々はついに荒波を乗り越え安全の港を作り上げた－我が国の平和のために。"
+ enact_edict_de_nantes_desc:0 "王国は、無数の派閥や宗派によって大きく引き裂かれ、すべての団体のうち最も正統なものは最も少数であった。神は我々にこの嵐に対抗する力を与え、我々はついに荒波を乗り越え安全の港を作り上げた。我が国の平和のために。"
  revoke_edict_de_nantes_title:0 "ナントの勅令の取り消し"
  revoke_edict_de_nantes_desc:0 "我々は、それに続く結果として与えられた特別条項だけでなく、それ以来、前述の宗教に有利に行われてきたすべてについて、前述のナントの勅命を全面的に取り消す以外に何もできないと判断した。"
  edict_de_nantes:0 "ナントの勅令"
@@ -6688,7 +6688,7 @@
  KOJ:0 "エルサレム"
  KOJ_ADJ:0 "エルサレム"
  kingdom_of_jerusalem_title:0 "エルサレム王国を再確立"
- kingdom_of_jerusalem_desc:0 "喜べ！聖なるエルサレムは我々キリスト教徒の手に再び戻った－我々キリスト教徒の手で。教皇は我々がエルサレム王国を再度確立した場合は、我々の救いが保証されることを伝えてきている。"
+ kingdom_of_jerusalem_desc:0 "喜べ！聖なるエルサレムは我々キリスト教徒の手に再び戻った。我々キリスト教徒の手で。教皇は我々がエルサレム王国を再度確立した場合は、我々の救いが保証されることを伝えてきている。"
  non_patrolled:0 "海軍の巡回の欠如"
  ADMIN_EFFICIENCY:0 "統治効率"
  MILITARY_TACTICS:0 "軍事戦術"
@@ -6969,12 +6969,12 @@
  BREAKMARCURIANEWDESC:0 "王室間の婚姻を破棄すると、通常貴族たちを混乱させます。しかし、我々は教皇の支配者として神の制裁を主張することができます。"
  BREAKRMCURIADESCR:0 "$COUNTRY$との王室間の婚姻を破棄してもよろしいですか？これは我々の関係を傷つけますが、教皇の支配者として、我々は安定度を失うことはありません。"
  PAPAL_INFLUENCE:0 "教皇への影響力"
- PAPAL_INFLUENCE_NOT_ENOUGH:0 "§R－十分な教皇への影響力を持っていません。§!"
+ PAPAL_INFLUENCE_NOT_ENOUGH:0 "§R- 教皇への影響力が十分ではありません。§!"
  levy_church_tax:0 "教会税の取り立て"
  bless_monarch:0 "君主への祝福"
  indulgence_for_sins:1 "王朝継承の認可"
  local_saint:0 "地域の聖人を列福する"
- PAPAL_INFLUENCE_NO_CARDINAL:0 "§R－有効な枢機卿を持っていない場合は教皇への影響力を投資することができません。§!"
+ PAPAL_INFLUENCE_NO_CARDINAL:0 "§R- 有効な枢機卿を持っていない場合、教皇への影響力を投資することができません。§!"
  CARDINALLIST:0 "$COUNTRY$の$PROVINCE$の可能性は$SCORE$%です。\n"
  YEARLY_PAPAL_INFLUENCE:0 "年間教皇への影響力"
  YEARLY_CHANGE:0 "年間変化"
@@ -6989,8 +6989,8 @@
  NEW_CARDINAL_EXPL:0 "$NEW$が彼の後ろで糸を引いています。"
  NEW_CARDINAL_EXPL_OURS:0 "取り決めにおいて、我々はいくらかの教皇への影響力が必要なものの、彼は我々に忠実です。"
  HRE_INFLUENCE_DESC:1 "帝国の権威は帝国諸侯に及ぼす皇帝の支配力を表します。権威は神聖ローマ帝国改革の制定に必要です。高い権威はより多くの国が帝国に加盟することを促進するでしょう。"
- HRE_INFLUENCE_GAIN:1 "増加要因：\n－多くの加盟国を持つ\n－加盟国が平和である\n－帝国に州が加わる\n－皇帝位が同じ国に継承される\n－皇帝が帝国事件で多数派と同じ投票をする"
- HRE_INFLUENCE_LOSS:1 "減少要因：\n－加盟国の参戦要請を拒否する\n－帝国から州が離脱する\n－帝国領土が他国に支配される\n－帝国領土が異教徒や異端に支配される\n－選帝候の数が7未満\n－皇帝が帝国事件で少数派と同じ投票をする"
+ HRE_INFLUENCE_GAIN:1 "増加要因：\n - 多くの加盟国を持つ\n - 加盟国が平和である\n - 帝国に州が加わる\n - 皇帝位が同じ国に継承される\n - 皇帝が帝国事件で多数派と同じ投票をする"
+ HRE_INFLUENCE_LOSS:1 "減少要因：\n - 加盟国の参戦要請を拒否する\n - 帝国から州が離脱する\n - 帝国領土が他国に支配される\n - 帝国領土が異教徒や異端に支配される\n - 選帝候の数が7未満\n - 皇帝が帝国事件で少数派と同じ投票をする"
  PAPAL_INF_LESS_THAN:0 "教皇への影響力が右記未満である："
  PAPAL_INF_AT_LEAST:0 "教皇への影響力が右記以上である："
  INVESTED_PAPAL_INF_LESS_THAN:0 "投資した教皇への影響力が右記未満である："
@@ -7097,7 +7097,7 @@
  military_governors_decision_desc:2 "礼部は、帝国の国境内外にある多数の国民と少数の国家を管理するには、不十分で不適切だと考えられている。我々は、それらに対処することに焦点を当てた部門を開設するべきだ。"
  centralizing_top_government_decision_title:1 "官位の見直し"
  centralizing_top_government_decision_emperor:1 "官位の見直し"
- centralizing_top_government_decision_desc:2 "管治－官僚階級を再編成することは、我々に先行する無能な王朝に対する単なる打破の象徴となるだけでなく、帝国の政治構造を再調整することにより、我々の権力が集中し、我々の体制は、堀が沸き立つ黄金の要塞のようにしっかりと成長する。"
+ centralizing_top_government_decision_desc:2 "管治（官僚階級）を再編成することは、我々に先行する無能な王朝に対する単なる打破の象徴となるだけでなく、帝国の政治構造を再調整することにより、我々の権力が集中し、我々の体制は、堀が沸き立つ黄金の要塞のようにしっかりと成長する。"
  expand_bureaucracy_decree_title:0 "宮廷の官僚機構を拡大"
  expand_bureaucracy_decree_desc:0 ""
  expand_bureaucracy_decree:0 "宮廷の官僚機構を拡大"
@@ -7517,7 +7517,7 @@
  IMPERIAL_MANDATE_GAIN_DESC:0 "以下によって得られます：\n－安定度が正である。\n－朝貢国を持つ。\n－ステートが繁栄を享受している。"
  IMPERIAL_MANDATE_LOSS_DESC:1 "以下によって失われます：\n－州が荒廃している。\n－国家に汚職がある。\n－借金がある。"
  CELESTIAL_EMPEROR_BENEFIT:0 "§Y中華皇帝§!となることは以下の恩恵をもたらします：\n"
- CELESTIAL_EMPEROR_BENEFIT_DESC:0 "－高い天命のボーナス\n－能力主義の仕組みの活用\n－集権化の勅令を制定可能\n－中国への恒久的な主張\n－中国統一の開戦事由\n－近隣諸国への朝貢の強制が可能"
+ CELESTIAL_EMPEROR_BENEFIT_DESC:0 " -高い天命のボーナス\n -能力主義の仕組みの活用\n -集権化の勅令を制定可能\n -中国への恒久的な主張\n -中国統一の開戦事由\n -近隣諸国への朝貢の強制が可能"
  CELESTIAL_EMPEROR_DIPLOMATIC_ACTIONS_DESC:0 "§Y中華皇帝§!は以下の追加の外交行動を取ることがあります：\n$LIST|Y$"
  CELESTIAL_EMPIRE_NO_DIPLOMATIC_ACTIONS:0 "なし"
  CELESTIAL_EMPIRE_PAST_EMPERORS:0 "先帝："
