--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -915,7 +915,7 @@
  center_of_scholarship:0 "知識の中心地"
  center_of_scholarship_desc:0 "数世紀にわたって、スマトラの壮大な都市は学術的な学習と知識の場であった。それらに向かって、仏教徒と今やムスリムの世界の最初の、最高の、そして最も明るい人物を牽引することで、我々の学術的な精神は向かうところ敵なしである！"
  merchants_of_the_indian_ocean:0 "インド洋の商人"
- merchants_of_the_indian_ocean_desc:0 "広く遠い旅、我々の商人は世界の最も魅惑的な場所を旅する－西はマグレブから、東は中国まで、そしてより遠くへ！香辛料の交易からの豊富な富は商人組合に、多くの新しい健康で丈夫な人々を引き付けている。"
+ merchants_of_the_indian_ocean_desc:0 "広く遠い旅、我々の商人は世界の最も魅惑的な場所を旅する、西はマグレブから、東は中国まで、そしてより遠くへ！香辛料の交易からの豊富な富は商人組合に、多くの新しい健康で丈夫な人々を引き付けている。"
  legacy_of_srivijaya:0 "シュリーヴィジャヤの遺産"
  legacy_of_srivijaya_desc:0 "シュリヴィージャヤは東南アジアで最も強い影響を与えた有力なスマトラ国家であった。彼らは交易と強大な軍事力によって拡大し、数世紀の間、地方に強い覇権を保持した。そして、我らはその誇り高き後継者である！喜ぶがいい！"
  rule_of_the_sea:0 "海洋支配"
@@ -956,14 +956,14 @@
  boyar_regime_desc:0 "アルバ・ユリア条約はワラキア貴族の権力を固めた。12名の大ボヤールからなる評議会が、ヴォイヴォダ（領主）のそばで国政に関与するようになった。"
  abolition_of_serfdom:0 "農奴制の廃止"
  abolition_of_serfdom_desc:0 "トランシルヴァニアへ逃亡する農奴の数を大幅に減少させるため、1746年にワラキアの農奴制は廃止された。"
- CANNOT_JOIN_LEAGUE_AT_LEAGUE_WAR:0 "§R－連盟戦争の間は、我々は連盟に参加したり離脱することはできません。§!"
- CANNOT_JOIN_LEAGUE_AT_WAR:0 "§R戦争中は連盟に参加し、または離脱することはできません。§!"
- CANNOT_JOIN_LEAGUE_TRUCE_WITH_EMPEROR:0 "§R－皇帝と停戦している間は、我々はこの連盟に参加することはできません。§!"
- EMPEROR_CANNOT_JOIN_LEAGUE:0 "§R－皇帝は連盟に参加したり、または離脱することはできません。§!"
- NOT_DISCOVERED_HRE:0 "§R－我々は神聖ローマ帝国を発見していません！§!"
- HRE_ON_OTHER_CONTINENT:0 "§R－我々の首都が神聖ローマ帝国と異なる大陸にある場合は、我々は連盟に参加することはできません。§!"
- ALREADY_MEMBER_OF_LEAGUE:0 "§R－我々はすでに連盟の一員です！§!"
- RECENTLY_JOINED_LEAGUE:0 "§R－最近連盟に参加したばかりなので、§Y$DATE$までは離脱することができません。§!."
+ CANNOT_JOIN_LEAGUE_AT_LEAGUE_WAR:0 "§R- 連盟戦争の間は、連盟への加盟・脱退ができません。§!"
+ CANNOT_JOIN_LEAGUE_AT_WAR:0 "§R- 戦争中は連盟への参加・脱退ができません。§!"
+ CANNOT_JOIN_LEAGUE_TRUCE_WITH_EMPEROR:0 "§R- 皇帝と停戦している間は、この連盟に加盟することができません。§!"
+ EMPEROR_CANNOT_JOIN_LEAGUE:0 "§R- 皇帝は連盟への加盟・脱退ができません。§!"
+ NOT_DISCOVERED_HRE:0 "§R- 神聖ローマ帝国を発見していません！§!"
+ HRE_ON_OTHER_CONTINENT:0 "§R- 首都が神聖ローマ帝国と異なる大陸にある場合、連盟に加盟することはできません。§!"
+ ALREADY_MEMBER_OF_LEAGUE:0 "§R- 我々はすでに連盟の一員です！§!"
+ RECENTLY_JOINED_LEAGUE:0 "§R- 最近連盟に加盟したため、§Y$DATE$まで脱退することができません。§!."
  manchu_nation_1_title:1 "満州の民族意識の採用"
  manchu_nation_1_desc:0 "古の女真族の3つの首都を掌握した今こそ、満州という新たな民族意識の採用により、人民の統一を宣言する時だ。"
  cb_sengoku:0 "戦国"
@@ -1567,7 +1567,7 @@
  flavor_guj.5.t:0 "ブルハヌッディーン・クトゥブ＝エ・アラム"
  flavor_guj.5.d:0 "我々の首都に住むスーフィーの指導者の一人は、最近、我々の王朝に対する彼の支持のためにより無遠慮になっている。我々が王国を良い方向に向けていることは、今や多くの人にとって明らかであり、これらの声明が国民の気分に与える影響は非常に肯定的である。"
  flavor_guj.5.a:0 "何と明晰な視点を持った男だろう！"
- flavor_guj.6.t:0 "ジャイナ教とヒンドゥー教の商人社会 - Vasanta Vilasa"
+ flavor_guj.6.t:0 "ジャイナ教とヒンドゥー教の商人社会－Vasanta Vilasa"
  flavor_guj.6.d:0 "グジャラートの商人の幸福は、常に我々の王朝の心の近くにあり、我々は我々の都市で仕事をしているジャイナ教、ヒンドゥー教あるいはパールシーの交易商たちを許容するだけでなく、多くの点で奨励してきた。\nその結果、事業は最近グジャラートのあらゆる宗教の商人たちにとって非常に良いものであった。最近完成した春とクリシュナ神の儀式については、ヒンドゥー教の有名なアフマダーバードの商人が都市とその支配者を賞賛する機会を得た。\nこれは何よりも、我々の政策の成功の表れである。"
  flavor_guj.6.a:0 "素晴らしい"
  flavor_guj.6.b:0 "冒涜だ！明らかに我々の法はあまりにも手ぬるいものになっている。"
@@ -1589,7 +1589,7 @@
  flavor_guj.11.d:0 "スーフィーの指導者であり、我々の一族の支持者であるアフマド・カトゥが死去した。この偉大な人物は、複数の世代に渡ってグジャラート・スルターン朝の顧問として行動し、かつてはアーメダバードの偉大な都市の計画に参加した。この損失は王国に大きな精神的空白を残し、我々の王朝は永遠に彼の恩を感じ続けるだろう。"
  flavor_guj.11.a:0 "偉大な男を称えるために壮大な名霊廟を建設しなければ。"
  flavor_guj.11.b:0 "王国にとって重大な損失だ。"
- flavor_guj.12.t:0 "キッサ＝イ・サンジャン - グジャラートのパールシー社会"
+ flavor_guj.12.t:0 "キッサ＝イ・サンジャン－グジャラートのパールシー社会"
  flavor_guj.12.d:0 "何百年も前、ペルシアのゾロアスター教の難民の集団がグジャラートに定住し、サンジャンのパールシー社会を設立した。時代を通して、この宗教的少数派は弾力的であることを示し、この活動的な地域の発展に積極的な役割を果たした。\n最近、パールシーの聖職者は、10世紀の彼らのペルシア出国から今日までの、パールシーの口述の歴史的伝統を記録している。結果として得られるキッサ＝イ・サンジャンは確かに高級なペルシア詩の古典的な模範であるが、それは何よりも何世代にも渡ってパールシー自身が大切にする物語である。"
  flavor_guj.12.a:0 "OK"
  flavor_guj.13.t:0 "ミラト＝イ・シカンドリ"
@@ -1755,7 +1755,7 @@
  tyw_events.31.a:0 "大使の申し出を受け入れる。"
  tyw_events.31.b:0 "我々がこの土地を主張していないことを、すべての者に知らせよう。"
  tyw_events.32.t:0 "スウェーデンに海峡税を執行"
- tyw_events.32.d:0 "海峡税は15世紀初頭からデンマークにとって重要な収入源であり、それ以来エーレスンド海峡を通じて交易に大きな影響力を行使している。\n\nスウェーデンはカルマル同盟において統一されているため税は免除されている。しかし、スウェーデンはもはやデンマーク王の支配下になく、長い間それは行われていない。おそらく、彼らも対価を支払うべきである－結局のところ、我々が昔のために示すことができる一定の寛大さがある。"
+ tyw_events.32.d:0 "海峡税は15世紀初頭からデンマークにとって重要な収入源であり、それ以来エーレスンド海峡を通じて交易に大きな影響力を行使している。\n\nスウェーデンはカルマル同盟において統一されているため税は免除されている。しかし、スウェーデンはもはやデンマーク王の支配下になく、長い間それは行われていない。おそらく、彼らも対価を支払うべきである。結局のところ、我々が昔のために示すことができる一定の寛大さがある。"
  tyw_events.32.a:0 "我々はもっと前に免除を取り除いておくべきだったな。"
  tyw_events.32.b:0 "このような伝統が平和を維持する。"
  tyw_events.33.t:0 "デンマークが海峡税を強制"
@@ -1979,7 +1979,7 @@
  flavor_jnp.9.d:0 "ジャウンプル・スルターン朝の使者たちは、我々の属国であるカールピーのスルタンが、ムスリム女性に対してひどく下品な行為を行い、処罰されなければならないと主張している。ジャウンプルは自ら問題の解決に臨み、カールピーに対する懲罰的な遠征を望んでいる。\nカールピーの状況に関する噂も耳にするが、慎重に検討すべき決断であり、カールピーはジャウンプルとマールワーの間で争われていた古い地域であることを考えると、ジャウンプルが当初の計画より大きな計画を立てる可能性が低いとは思われない。"
  flavor_jnp.9.a:0 "ジャウンプルがカールピーを処罰することを許可する。"
  flavor_jnp.9.b:0 "我々の属国を支援するべきだ。"
- flavor_jnp.10.t:0 "カールピー - 権限が付与された"
+ flavor_jnp.10.t:0 "カールピー－権限が付与された"
  flavor_jnp.10.d:0 "マールワーは我々の2つの国家間のより良い関係への利害において、我々がカールピーのスルタンを処罰することに同意した。"
  flavor_jnp.10.a:0 "素晴らしい！"
  flavor_jnp.11.t:0 "マールワーのスルタンは拒否した"
@@ -2356,6 +2356,6 @@
  flavor_mor.13.desc:0 "ワッタース家とマリーン家との間の紛争をきっかけに、南部の勢力は混乱し始めました。弱っているのが分かったので、スーフィーや部族、エミールは同盟し、互いの間で婚姻による協定を作り始めました。[Root.Monarch.GetTitle]王室の多くは彼らを放任し、[Root.Capital.GetName]に引きこもっていますが、彼らが解決しようとしなければ、南部からの脅威は大きくなり続けるだけでしょう。"
  flavor_mor.13.a:0 "軍のショーによって彼らに自分の居場所を思い出させよう。"
  flavor_mor.13.b:0 "彼らのやりたいようにさせておけばいい。"
- incan_nation_empire_custom_tooltip:0 "§Y[Root.GetName]§!の政府ランクを§Y帝国§!に変更します。"
+ incan_nation_empire_custom_tooltip:0 "§Y[Root.GetName]§!の政府ランクが§Y帝国§!に変わります。"
  TRADE_COMPANY_MOLUCCAS_Indonesia_Trade_Company:0 "モルッカ交易会社"
  REVOLUTIONARY_SHORT_NAME:0 "革命$NAME$"
