--- a/source/localisation/common_sense_l_english.yml
+++ b/source/localisation/common_sense_l_english.yml
@@ -294,7 +294,7 @@
  devotion_events.105.b:0 "不本意ながら街の支配を受け入れる。"
  devotion_events.106.t:0 "権限の共有"
  devotion_events.107.t:0 "[Root.Capital.GetName]での聖年祭"
- devotion_events.107.d:0 "Jubilee－聖年－はローマまたは自国の首都などの聖地への巡礼を伴う。教皇が通常25年または50年ごとに召集する、罪の許し、万事の恩赦の特別な年であるが、誰が[Root.Capital.GetName]で自分たちの聖年を召集できないと言うのだろう？"
+ devotion_events.107.d:0 "Jubilee（聖年）はローマまたは自国の首都などの聖地への巡礼を伴う。教皇が通常25年または50年ごとに召集する、罪の許し、万事の恩赦の特別な年であるが、誰が[Root.Capital.GetName]で自分たちの聖年を召集できないと言うのだろう？"
  devotion_events.107.a:0 "非常に素晴らしいアイデアだ、我々は承認する！"
  devotion_events.107.b:0 "今年ではない、おそらく来年かな？"
  devotion_events.108.t:0 "[From.Capital.GetName]での聖年祭"
@@ -345,7 +345,7 @@
  devotion_events.205.a:0 "交易商のためにより土地を。"
  devotion_events.205.b:0 "その場所は礼拝のためにある。"
  devotion_events.206.t:0 "宗教的浄化"
- devotion_events.206.d:0 "ムハンマド御自身がメッカを奪還した際に偶像を打ち壊した例に倣い、我々の助言者達は[Root.Country.GetName]でも同様の浄化を行い、正しいムスリムの在り方を示すべきだと主張している。偶像崇拝は禁止されているが、[Root.Province.GetName]では人々は未だに神聖な寺院に巡礼し、墓所に向かって祈っている。これはハラム－罪業－であろうか、あるいは許されるべき行いであろうか。"
+ devotion_events.206.d:0 "ムハンマド御自身がメッカを奪還した際に偶像を打ち壊した例に倣い、我々の助言者達は[Root.Country.GetName]でも同様の浄化を行い、正しいムスリムの在り方を示すべきだと主張している。偶像崇拝は禁止されているが、[Root.Province.GetName]では人々は未だに神聖な寺院に巡礼し、墓所に向かって祈っている。これはハラム（罪業）であろうか、あるいは許されるべき行いであろうか。"
  devotion_events.206.a:0 "この州の罪を浄化せよ！"
  devotion_events.206.b:0 "これはハラムではない、しかしムバー（推奨されない行為だが罪ではない）である。"
  devotion_events.207.t:0 "腐敗した総督"
@@ -363,7 +363,7 @@
  devotion_events.209.a:0 "私のやり方を変えることを約束する。"
  devotion_events.209.b:0 "農民は彼らが望むどんな非難でもするだろうが、私は[Root.Monarch.GetTitle]だ！"
  devotion_events.210.t:0 "ラフィダ"
- devotion_events.210.d:1 "アブー・バクル、ウマル、およびウスマーンを預言者ムハンマド、彼に平安あれ、の後継者として認識しない、イスラムの権威と指導者の地位を拒否するラフィダと呼ばれる人々、シーア派は、彼らの存在を我々の州で知られるようになり、彼らに加わるものもいる。彼らは自身をラワーフィド－拒否する者－と呼び、常に悪を拒否したことを誇りに思い、それに向かうことはない。"
+ devotion_events.210.d:1 "アブー・バクル、ウマル、およびウスマーンを預言者ムハンマド、彼に平安あれ、の後継者として認識しない、イスラムの権威と指導者の地位を拒否するラフィダと呼ばれる人々、シーア派は、彼らの存在を我々の州で知られるようになり、彼らに加わるものもいる。彼らは自身をラワーフィド（拒否する者）と呼び、常に悪を拒否したことを誇りに思い、それに向かうことはない。"
  devotion_events.210.a:0 "一刻も早く、彼らを[Root.Country.GetName]から追放しろ！"
  devotion_events.210.b:0 "彼らは、彼ら自身の望むものを信じている。"
  devotion_events.211.t:0 "ナシビ"
@@ -423,7 +423,7 @@
  dev_religious_cleansing:0 "宗教浄化"
  desc_dev_religious_cleansing:0 "我々はイスラムを簡単な始まりに戻そうとしており、メッカを奪還し偶像を破壊したときのムハンマドのやり方を模倣しようとしている。"
  dev_rafida:0 "ラフィダ"
- desc_dev_rafida:0 "シーア派は、ラフィダ－拒否する者－と呼ばれることもあり、彼らはアブー・バクル、ウマル、およびウスマーンを預言者ムハンマドの後継者として認めることを拒否する。"
+ desc_dev_rafida:0 "シーア派は、ラフィダ（拒否する者）と呼ばれることもあり、彼らはアブー・バクル、ウマル、およびウスマーンを預言者ムハンマドの後継者として認めることを拒否する。"
  dev_nasibi:0 "ナシビ"
  desc_dev_nasibi:0 "アフル・アル・バイト、すなわち預言者ムハンマドの子孫とその信者たちを嫌悪するスンナ派の集団は、アブー・バクル、ウマル、ウスマーンがムハンマドの正統な後継者だと愚かに信じている。"
  dev_idolatry_abolished:0 "偶像崇拝禁止"
@@ -740,7 +740,7 @@
  gov_rank_8:0 "政府ランク"
  gov_rank_9:0 "政府ランク"
  gov_rank_10:0 "政府ランク"
- UPGRADE_GOV_RANK:0 "政府ランクをアップグレード"
+ UPGRADE_GOV_RANK:0 "政府ランクのアップグレード"
  RANK_1:0 "公国"
  RANK_2:0 "王国"
  RANK_3:0 "帝国"
@@ -763,18 +763,18 @@
  GOVERNMENT_EFFECTS_DUE_TO_RANK:0 "§Y$RANK$の政府ランク§!により、この§Y政体§!は以下の効果があります：\n"
  CURRENT_GOVERNMENT_RANK:0 "$COUNTRY_ADJ$の政府は§Y$RANK$§!階級です。"
  CURRENT_GOVERNMENT_RANK_US:0 "我々の政府ランクは§Y$RANK$§!です。"
- CURRENT_GOVERNMENT_RANK_DESC:0 "§Y$RANK1$§!、§Y$RANK2$§!、§Y$RANK3$§!の3つの政府ランクがあります。より上位の政府はボーナスを増やし、ナショナルフォーカスを変更まで待機する必要のある年数を減らします。"
+ CURRENT_GOVERNMENT_RANK_DESC:0 "§Y$RANK1$§!、§Y$RANK2$§!、§Y$RANK3$§!の3つの政府ランクがあります。より上位の政府はボーナスを増やし、ナショナルフォーカス変更までの待機年数を減らします。"
  CULTURAL_UNION_EXPLAIN:0 "\n文化連合は$GOV$になっていることにより：$NAME|Y$グループのすべての文化は受容されています。"
  CULTURAL_UNION_EXPLAIN2:0 "\n$DEV$を超える開発による文化連合：$NAME|Y$グループのすべての文化は受容されています。"
  UPGRADE_GOVERNMENT:0 "政府ランクをアップグレードする"
  UPGRADE_GOVERNMENT_PRESTIGE:0 "§G$AMT$§!の威信を獲得します。"
  UPGRADE_GOVERNMENT_CULTURAL_UNION:0 "$NAME|Y$の文化連合を獲得します。"
- CANNOT_UPGRADE_RANK_SUBJECT:1 "§R－$SUBJECTTYPE$のため、我々は政府ランクをアップグレードできません。§!\n"
- CANNOT_UPGRADE_RANK_MAX_RANK:0 "§R－政府ランクはすでに最大です！§!\n"
- CANNOT_UPGRADE_RANK_NEED_DEVELOPMENT:0 "§R－政府ランクを向上させるには§Y$AMT$§!以上の総開発が必要ですが、§Y$CUR$§!しかありません。§W\n"
- CANNOT_UPGRADE_RANK_NEED_PRESTIGE:0 "§R－政府ランクを高めるため、§Y$AMT$§!以上の威信が必要です。§!\n"
- CANNOT_UPGRADE_RANK_HRE:1 "§R－神聖ローマ帝国内の国は、選帝侯のみが政府ランクをアップグレードできますが、王国までしか上昇させることはできません。§!\n"
- CANNOT_UPGRADE_RANK_HRE_ELECTOR:1 "§R－神聖ローマ帝国の選帝侯は、王国より上に政府ランクをアップグレードすることはできません。§!\n"
+ CANNOT_UPGRADE_RANK_SUBJECT:1 "§R- $SUBJECTTYPE$のため、政府ランクをアップグレードできません。§!\n"
+ CANNOT_UPGRADE_RANK_MAX_RANK:0 "§R- 政府ランクはすでに最大です！§!\n"
+ CANNOT_UPGRADE_RANK_NEED_DEVELOPMENT:0 "§R- 政府ランクを上げるには§Y$AMT$§!以上の総開発が必要ですが、§Y$CUR$§!しかありません。§W\n"
+ CANNOT_UPGRADE_RANK_NEED_PRESTIGE:0 "§R- 政府ランクを上げるには、威信が§Y$AMT$§!以上必要です。§!\n"
+ CANNOT_UPGRADE_RANK_HRE:1 "§R- 神聖ローマ帝国内の国は、選帝侯のみ政府ランクをアップグレードできますが、王国までしか上げられません。§!\n"
+ CANNOT_UPGRADE_RANK_HRE_ELECTOR:1 "§R- 神聖ローマ帝国の選帝侯は、王国より上の政府ランクにアップグレードすることはできません。§!\n"
  alert_lack_of_parliament_debate_instant:0 "§Y$NAME$における議論がない§!"
  alert_lack_of_parliament_debate_delayed:0 "$NAME$で進行中の議論がないため、自国に以下の効果があります："
  alert_too_few_seats_of_parliament_instant:0 "§Y$NAME$の議席不足§!"
@@ -1669,8 +1669,8 @@
  horde_development:0 "総開発度"
  integrating_minorities_parliament_tooltip:0 "議会の議席は、資格のある異文化州に割り当てられます。"
  GOVERNMENT_EFFECTS_DUE_TO_DUCHY_RANK:0 "政府ランク§Y公国§!にはボーナスがありません。"
- CANNOT_UPGRADE_RANK_FIXED_RANK:1 "§R－政府改革$REFORM|Y$により現在の政府ランクを変更することはできません。§!\n"
- CANNOT_UPGRADE_RANK_FIXED_RANK_GENERIC:0 "§R－現在の政府ランクを変更することはできません。§!\n"
+ CANNOT_UPGRADE_RANK_FIXED_RANK:1 "§R- 政府改革$REFORM|Y$により現在の政府ランクを変えることができません。§!\n"
+ CANNOT_UPGRADE_RANK_FIXED_RANK_GENERIC:0 "§R- 現在の政府ランクを変えることはできません。§!\n"
  RR_SUPPRESSION_CAPABILITY:1 "§Y州の不穏度の減少§!"
  RR_SUPPRESSION_CAPABILITY_DESC:1 "州に駐留しているユニットによる不穏度の減少：$BASE|G$\n州の不穏度は$MAX_UNREST_REDUCTION|G$を超えることはありません。"
  BUILDING_SLOTS_AT_LEAST:1 "建築物スロットの残りが§Y$VALUE$§!以上である。"
