--- a/source/localisation/emperor_l_english.yml
+++ b/source/localisation/emperor_l_english.yml
@@ -339,7 +339,7 @@
  CALC_EXPAND_ADMIN:0 "$WHERE$においては$VAL|Y$の開発度が安上がりです"
  EXPAND_ADMINISTRATION_CONFIRM_TITLE:0 "統治の拡大"
  EXPAND_ADMINISTRATION_CONFIRM_DESC:0 "以下の効果を得るために$COST|Y$の改革進捗度を費やしますか？：\n$EFFECT$"
- EXPAND_ADMINISTRATION_NOT_ENOUGH_PROGRESS:0 "§R- 統治拡大には少なくとも$COST$の改革進捗度が必要です。§!"
+ EXPAND_ADMINISTRATION_NOT_ENOUGH_PROGRESS:0 "§R- 統治拡大には改革進捗度が$COST$以上必要です。§!"
  EXPAND_ADMINISTRATION_TT:1 "$COST|Y$の改革進捗度を費やして以下の効果を得ます：\n$EFFECT$"
  COUNCIL_OF_TRENT:0 "トリエント公会議"
  COUNCIL_POSITION_ALREADY:0 "§R公会議においてすでにこの姿勢を選択しています。§!"
@@ -388,7 +388,7 @@
  APPOINT_CARDINALTITLE:0 "枢機卿を任命"
  APPOINT_CARDINALDESC:0 "対象国で枢機卿を任命することで、彼らの我々に対する評価と、次の教皇の支配者の選定のために投資された影響力を高めます。"
  APPOINT_CARDINAL_DESCRIPTION:0 "$COST|Y$¤を投資して$RECIPIENT$の土地で枢機卿を任命します。これは非常な名誉であり、彼らは我々に恩義を感じ、私我々に対する彼らの評価を$OPINION|G$増加させます。\n\n次の教皇の支配者になるための我々の投資された影響力は$INFLUENCE|Y$増加します。"
- APPOINT_CARDINAL_NOT_IN_SUBJECTS_DIEING:0 "§R-我々が併合しようとしている国で枢機卿を任命することはできません。§!"
+ APPOINT_CARDINAL_NOT_IN_SUBJECTS_DIEING:0 "§R- 我々が併合しようとしている国で枢機卿を任命することはできません。§!"
  APPOINT_CARDINAL_ONLY_CATHOLICS:0 "§Rカトリック信仰に従う国家においてのみ、枢機卿を任命できます。§!"
  APPOINT_CARDINAL_TOO_MANY_IN_COUNTRY:0 "§R同じ国家内で$MAX$以上の枢機卿を任命することはできません。§!"
  APPOINT_CARDINAL_TOO_MANY_IN_WORLD:0 "§R世界にはすでに十分な枢機卿がいます。さらにもう1人任命すると、神に与えられた我々の権威が不安定になるでしょう。§!"
@@ -781,7 +781,7 @@
  PRIVILEGE_NO_LONGER_VALID_DESC:0 "国内状況の変化にともない、$ESTATE|Y$にはもはや$PRIVILEGE|Y$の特権はありません$EFFECTS$"
  PRIVILEGE_NO_LONGER_VALID_EFFECTS:0 "：\n$EFFECTS|Y$"
  PRIVILEGE_NO_LONGER_VALID_NO_EFFECT:0 "。これによる我が国への影響はありません。"
- UNLOCK_FIXED_GOV_RANK:0 "政府ランクを変更する機能のロックを解除します。"
+ UNLOCK_FIXED_GOV_RANK:0 "政府ランクを変更する機能を解除します。"
  PRIVILEGE_PICKER_TITLE:0 "特権"
  PRIVILEGE_PICKER_SUB_TITLE:1 "$ESTATE|Y$に特権を与える"
  MANAGE_ESTATE_PRIVILEGES:1 "特権の追加"
