--- a/source/localisation/government_l_english.yml
+++ b/source/localisation/government_l_english.yml
@@ -223,7 +223,7 @@
  mechanic_allow_convert_no:1 ""
  mechanic_papacy_yes:0 "教皇である"
  mechanic_papacy_no:0 "教皇ではない"
- mechanic_fixed_rank:0 "政府ランクを$RANK$に固定"
+ mechanic_fixed_rank:0 "政府ランクを$RANK$に固定します。"
  mechanic_monastic_yes:0 "宗教を変更した時、宗教統一度は信仰値に影響を与えます"
  mechanic_monastic_no:0 "宗教を変更した時、宗教統一度は信仰値に影響を与えません"
  mechanic_rulers_can_be_generals_yes:0 "支配者は将軍になることができます"
