--- a/source/localisation/nw2_l_english.yml
+++ b/source/localisation/nw2_l_english.yml
@@ -420,7 +420,7 @@
  FE_RANDOMWORLD_DESC2:0 "§Yランダムな新世界§!を有効にしてのプレイは、最も早いブックマークでのみ作動します。"
  FE_OBSERVE_DESC:0 "観察者モード"
  FE_OBSERVE_DESC2:0 "観察者モードでは、国をプレイしなくてもゲームに参加できます。代わりに、すべての国で何が起こっているかを見ることができます。"
- FE_OBSERVE_SERVER:0 "§R－ホストはオブザーバーになれません。§!"
+ FE_OBSERVE_SERVER:0 "§R- ホストはオブザーバーになれません。§!"
  FE_USETI_DESC:0 "ロビーでの未知領域を有効化または無効化します。§Yランダムな新大陸§!を有効にした際、あなたが探索する楽しみを失いたくないときに有用です。"
  NOCOLONIALCOLONISENONCITYADJACENT:0 "植民地国家は、彼らがすでに所有している州に隣接している場合にのみ、植民地圏外に植民地を作ることができます。"
  OBSERVER_SELECT_COUNTRY_D:0 "Ctrlキーを押しながら地図上の国をクリックするか、アウトライナーのプレーヤーをクリックすることもできます。"
